# dedalo

./: .dockerignore  .editorconfig  .eslintrc  .gitattributes  .gitignore  .gitlab-ci.yml  .htaccess  .htaccess~~  .jshintrc  .mocharc.json  .rr.yaml  AGENTS.md  AGENT_TOOLS.md  CHANGELOG.html  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile  License.md  README.md  Readme  Readme.html  Readme.md  Updates.md  autoload.php  biome.jsonc  bunfig.toml  clie_mcp_settings.json  cliff.toml  cline_mcp_settings.json  composer.json  config.codekit3  docker-compose.yml  idehelper.php  index.php  info.php  login_recovery_labels.csv  media  mkdocs.yml  mytest8.php  package-lock.json  (+10 more)
.github/: copilot-instructions.md  pull_request_template.md
Connections/: config.php  encod.php  labels.php  lang_code.php
analysis/: full-technical-audit-2026-06-13.md  less_to_css_migration_analysis.md  matrix-time-machine-partitioning-plan.md  status.md
config/: .env.dist  .htaccess  bootstrap.php  config.php  config.shim.php  config_areas.php  dd_tipos.php  defaults.env  hosts.map.sample  sample.config.local.php  sample.config.php  sample.config_core.php  sample.config_db.php  sample.env  version.inc
core/: index.php  sw.js
css/: edit.css  general.css  list.css  loader.css  pagination.css  pagination2.css
deploy/: dedalo-backup.service  dedalo-backup.timer  dedalo-ts-restart.service  dedalo-ts-watchdog.service  dedalo-ts-watchdog.timer  dedalo-ts.service  deploy.sh  nginx.conf
dev/: gen_sample_env.php
diffusion/: alias_resolution_logic.md  class.diffusion.php  class.diffusion_activity_logger.php  class.diffusion_api_client.php  (+18 more)
inc/: btn.php  (+28 more)
install/http_modules/mod_h264_streaming-3.0.0/mod_h264_streaming-3.0.0/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool
install/http_modules/mod_h264_streaming-3.0.0/mod_h264_streaming-3.0.0/autom4te.cache/: output.0  requests  traces.0
install/http_modules/mod_h264_streaming-3.0.0/mod_h264_streaming-3.0.0/m4/: apache.m4  apache_test.m4
install/http_modules/mod_h264_streaming-3.0.0/mod_h264_streaming-3.0.0/src/: Makefile  Makefile.am  Makefile.in  mod_h264_streaming.c  mod_streaming_export.h  moov.c  moov.h  mp4_io.c  mp4_io.h  mp4_process.c  mp4_process.h  mp4_reader.c  mp4_reader.h  mp4_writer.c  mp4_writer.h  output_bucket.c  output_bucket.h  output_mp4.c  output_mp4.h
install/http_modules/mod_h264_streaming-3.0.0/mod_h264_streaming-3.0.0/src/.deps/: mod_h264_streaming_la-mod_h264_streaming.Plo  mod_h264_streaming_la-moov.Plo  mod_h264_streaming_la-mp4_io.Plo  mod_h264_streaming_la-mp4_process.Plo  mod_h264_streaming_la-mp4_reader.Plo  mod_h264_streaming_la-mp4_writer.Plo  mod_h264_streaming_la-output_bucket.Plo  mod_h264_streaming_la-output_mp4.Plo
(+10709 files in other folders)
